# My-FastAPI-Course

./: .env  Note.py  celery_script.py  pyproject.toml  requirements.txt  using_uv.txt
content/: _1_Creating_a_Simple_Web_Server.py  _2_Building_a_CRUD_REST_API.py
src/: celery_tasks.py  config.py  errors.py  mail.py  main.py  middleware.py
src/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: __init__.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 14a976f15952_add_reviews_table_and_setup_.py  37568bd8b5ab_add_roles_to_users.py  818ba0c223f7_fix.py  81d328153efa_add_password_hash_field.py  91181af4b2d6_initial_migration.py  f255c83b1dba_add_book_tags_table.py  f6caefd4d8b7_relate_users_to_books.py
src/reviews/: __init__.py  routes.py  schemas.py  service.py
src/tags/: __init__.py  routes.py  schemas.py  service.py
src/templates/: email_verification.html  password_reset.html  reset_error.html  reset_password_form.html  reset_success.html  verification_error.html  verification_success.html
src/tests/: conftest.py  test_auth.py  test_books.py
