[project]
name = "my-fastapi-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asgiref>=3.11.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.0",
    "eventlet>=0.40.4",
    "fastapi-contrib>=0.2.11",
    "fastapi-mail>=1.5.8",
    "fastapi[standard]>=0.122.0",
    "flower>=2.0.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
]
